fix display on mobile

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -154,7 +154,7 @@ dt {
 }
 
 
-#header {
+#top {
   z-index: 100;
   left:0;
   top: 0px;
@@ -165,10 +165,12 @@ dt {
   box-shadow: 0px 1px 3px rgba(0,0,0,.25);
 
   nav {
-    max-width: 650px;
+    max-width: 640px;
     margin: 0 auto;
-    padding: 0 10px;
-    margin: 6px auto;
+/*    padding: 0 10px;*/
+    margin-top: 0px;
+    display: inline;
+/*    margin: 6px auto;*/
 
     li {
       font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
